--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -70,7 +70,7 @@ XXX
 Since C<.> is now removed from C<@INC> by default, C<do> will now trigger
 a warning recommending to fix the C<do> statement:
 
-L<do "%s" failed, '.' is no longer in @INC|perldiag/do "%s" failed, '.' is no longer in @INC; did you mean do ".E<sol>%s"?>
+L<do "%s" failed, '.' is no longer in @INC|perldiag/do "%s" failed, '.' is no longer in @INC; did you mean do "./%s"?>
 
 =back
 
