Remove deprecated function 'to_utf8_case()'
This is keeping with the schedule for 5.28.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -356,6 +356,11 @@ well.
 
 The C<PL_statbuf> interpreter variable has been removed.
 
+=item *
+
+The deprecated function C<to_utf8_case()>, accessible from XS code, has
+been removed.
+
 =back
 
 =head1 Selected Bug Fixes
